--- a/our team/profile-abdelraouf.html
+++ b/our team/profile-abdelraouf.html
@@ -1,97 +1,156 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Abdelraouf - Profile</title>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!-- CSS FILES -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
+  <title>Abdelraouf - Profile</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Bootstrap CSS -->
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <!-- Bootstrap Icons -->
-    <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
 
-    <!-- Extra CSS -->
-    <link href="../css/tooplate-barista.css" rel="stylesheet">
-  </head>
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <body>
-    <main>
-      <!-- NAVBAR -->
-      <nav class="navbar navbar-expand-lg">                
-        <div class="container">
-          <a class="navbar-brand d-flex align-items-center me-3" href="../index.html">
-            <img src="../assets/img/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
-            Smart Door System
-          </a>
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-                  data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-                  aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+<body>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-lg-auto">
-              <li class="nav-item"><a class="nav-link" href="../index.html#section_1">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="../index.html#section_2">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="../index.html#section_3">Components</a></li>
-              <li class="nav-item"><a class="nav-link" href="../index.html#section_4">Versions</a></li>
-              <li class="nav-item"><a class="nav-link" href="../index.html#section_5">Contact</a></li>
-            </ul>
-          </div>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
+  <!-- ======= Sidebar ======= -->
+  <header id="header">
+    <div class="d-flex flex-column">
+
+      <div class="profile">
+        <img src="assets/img/team/abdelraouf.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="profile-abdelraouf.html">Abdelraouf</a></h1>
+        <div class="social-links mt-3 text-center">
+          <a href="mailto:abdelraouf@example.com" class="email"><i class="bi bi-envelope"></i></a>
+          <a href="https://github.com/abdelraouf0mabrouk" target="_blank" class="github"><i class="bi bi-github"></i></a>
         </div>
+      </div>
+
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        </ul>
       </nav>
+    </div>
+  </header>
+  <!-- End Sidebar -->
 
-      <!-- PROFILE SECTION -->
-      <section class="section-padding section-bg">
-        <div class="container">
-          <div class="row align-items-center">
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Abdelraouf</h1>
+      <p>I'm <span class="typed" data-typed-items="Project Designer, Developer, Python Lover"></span></p>
+    </div>
+  </section>
+  <!-- End Hero -->
 
-            <!-- صورة -->
-            <div class="col-lg-4 col-md-6 col-12 mb-4">
-              <img src="../assets/img/team/abdelraouf.jpg" class="img-fluid rounded shadow-lg" alt="Abdelraouf">
-            </div>
+  <main id="main">
 
-            <!-- نص -->
-            <div class="col-lg-8 col-md-6 col-12">
-              <h2 class="mb-3 text-white">Abdelraouf</h2>
-              <p class="text-white-50">
-                I'm the <strong>Project Designer and Developer</strong>.  
-                I mainly worked on developing the Smart Door System using Python and integrating the hardware with software.
-              </p>
-              <p class="text-white-50">
-                I’m passionate about IoT, AI, and automation.  
-                This project was a great opportunity to learn teamwork and system design.
-              </p>
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
 
-              <!-- روابط -->
-              <div class="mt-4">
-                <a href="mailto:abdelraouf@example.com" class="btn btn-warning me-2">
-                  <i class="bi bi-envelope"></i> Email
-                </a>
-                <a href="https://github.com/abdelraouf0mabrouk" target="_blank" class="btn btn-dark">
-                  <i class="bi bi-github"></i> GitHub
-                </a>
+        <div class="section-title">
+          <h2>About</h2>
+          <p>I'm the Project Designer and Developer of the Smart Door System. I mainly worked on Python integration and hardware/software design.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/team/abdelraouf.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>System Designer &amp; Developer</h3>
+            <p class="fst-italic">
+              I loved Python and that helped me develop the project. Passionate about IoT, AI, and automation.
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abdelraouf@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span>github.com/abdelraouf0mabrouk</span></li>
+                </ul>
               </div>
             </div>
-
           </div>
         </div>
-      </section>
-    </main>
 
-    <!-- JAVASCRIPT FILES -->
-    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/jquery.sticky.js"></script>
-    <script src="../js/click-scroll.js"></script>
-    <script src="../js/custom.js"></script>
-  </body>
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p>If you’d like to reach out, here’s how you can contact me:</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>abdelraouf@example.com</p>
+              </div>
+
+              <div class="github mt-4">
+                <i class="bi bi-github"></i>
+                <h4>GitHub:</h4>
+                <p>github.com/abdelraouf0mabrouk</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Contact Section -->
+
+  </main>
+  <!-- End #main -->
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
