--- a/our team/profile-abdelraouf.html
+++ b/our team/profile-abdelraouf.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Abdelraouf - Profile</title>
+  <title>Profile - Abdelraouf</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,18 +14,19 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,600,700|Poppins:300,400,600,700" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="vendor/aos/aos.css" rel="stylesheet">
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -33,16 +34,18 @@
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-  <!-- ======= Sidebar ======= -->
+  <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/team/abdelraouf.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="profile-abdelraouf.html">Abdelraouf</a></h1>
+        <img src="assets/img/my-profile-img.jpg" alt="Profile" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Abdelraouf</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="mailto:abdelraouf@example.com" class="email"><i class="bi bi-envelope"></i></a>
-          <a href="https://github.com/abdelraouf0mabrouk" target="_blank" class="github"><i class="bi bi-github"></i></a>
+          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="#" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -55,13 +58,13 @@
       </nav>
     </div>
   </header>
-  <!-- End Sidebar -->
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abdelraouf</h1>
-      <p>I'm <span class="typed" data-typed-items="Project Designer, Developer, Python Lover"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
     </div>
   </section>
   <!-- End Hero -->
@@ -71,20 +74,18 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>About</h2>
           <p>I'm the Project Designer and Developer of the Smart Door System. I mainly worked on Python integration and hardware/software design.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/team/abdelraouf.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>System Designer &amp; Developer</h3>
             <p class="fst-italic">
-              I loved Python and that helped me develop the project. Passionate about IoT, AI, and automation.
+              Passionate about IoT, AI, and automation.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -96,7 +97,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </section>
     <!-- End About Section -->
@@ -111,23 +111,15 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="info">
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>abdelraouf@example.com</p>
               </div>
-
-              <div class="github mt-4">
-                <i class="bi bi-github"></i>
-                <h4>GitHub:</h4>
-                <p>github.com/abdelraouf0mabrouk</p>
-              </div>
             </div>
           </div>
-
         </div>
 
       </div>
@@ -140,15 +132,14 @@
   <!-- Vendor JS Files -->
   <script src="vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="vendor/aos/aos.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/glightbox/js/glightbox.min.js"></script>
   <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="vendor/typed.js/typed.umd.js"></script>
+  <script src="vendor/typed.js/typed.min.js"></script>
   <script src="vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Main JS File -->
   <script src="js/main.js"></script>
 
 </body>
