--- a/control.html
+++ b/control.html
@@ -1,180 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Door System — Control</title>
-
-  <!-- Bootstrap 5 (CSS) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Door System Control</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
-    :root{
-      --bg1:#2c2c2c; --bg2:#1a1a1a;
-      --card:#2f2f2f; --list:#3a3a3a; --list-hover:#4a4a4a; --text:#fff;
+    body {
+      background: #f4f6f9;
+      font-family: Arial, sans-serif;
     }
-    body{
-      background: linear-gradient(120deg,var(--bg1),var(--bg2));
-      color:var(--text);
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,"Plus Jakarta Sans",Arial,sans-serif;
+    .control-card {
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+      background: #fff;
     }
-    h1{
-      text-align:center; font-weight:800; letter-spacing:.05em;
-      margin:40px 0 24px;
+    .control-card h3 {
+      border-bottom: 1px solid #ddd;
+      padding: 12px;
+      margin: 0;
     }
-    .control-card{
-      background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
+    .btn {
+      border-radius: 12px;
+      padding: 10px 20px;
+      margin: 5px;
     }
-    .btn-toggle{
-      width:100%; text-align:left; padding:16px 20px; font-weight:700; color:#fff;
-      background:transparent; border:0;
-    }
-    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
-    .list-group-dark .list-group-item{
-      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
-    }
-    .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
-    .ms-3{ margin-left:1rem !important; }
-    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
-    button.cmd-btn:hover {text-decoration:underline;}
   </style>
 </head>
 <body>
-  <div class="container py-3">
-    <h1>SMART DOOR SYSTEM</h1>
+  <div class="container py-4">
+    <h1 class="text-center mb-4">🚪 Smart Door System Control</h1>
 
-    <!-- ========== OPTIONS ========== -->
+    <!-- ========== CONTROL BUTTONS ========== -->
     <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#sdsOptions"
-              aria-expanded="false" aria-controls="sdsOptions"
-              onclick="closeInnerMenus('#sdsOptions')">
-        Smart Door System Options
-      </button>
-
-      <div id="sdsOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-
-          <!-- Open Door -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#openDoorMenu"
-                    aria-expanded="false" aria-controls="openDoorMenu">
-              Open Door
-            </button>
-            <div id="openDoorMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">close door only</button></li>
-              </ul>
-            </div>
-          </li>
-
-          <!-- Toggle Camera -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#cameraMenu"
-                    aria-expanded="false" aria-controls="cameraMenu">
-              Toggle Camera
-            </button>
-            <div id="cameraMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start camera')">start camera</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop camera')">stop camera</button></li>
-              </ul>
-            </div>
-          </li>
-
-          <!-- Toggle of the System -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#systemMenu"
-                    aria-expanded="false" aria-controls="systemMenu">
-              Toggle of the System
-            </button>
-            <div id="systemMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_loc')">lock system</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_unloc')">unlock system</button></li>
-              </ul>
-            </div>
-          </li>
-
-          <!-- Penalty Activate -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#penaltyMenu"
-                    aria-expanded="false" aria-controls="penaltyMenu">
-              Penalty Activate
-            </button>
-            <div id="penaltyMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen')">the system penalty</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen30')">extended to 30 seconds</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen60')">extended to 1 minutes</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzcof')">penalty with coffin dance buzzer</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzpoc')">penalty with pirates of the caribbean</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzztok')">penalty with tokyo</button></li>
-              </ul>
-            </div>
-          </li>
-
-        </ul>
+      <h3 class="p-3">🔘 Options</h3>
+      <div class="p-3">
+        <button class="btn btn-primary" onclick="sendCommand('open door')">Open Door</button>
+        <button class="btn btn-danger" onclick="sendCommand('close door')">Close Door</button>
+        <button class="btn btn-success" onclick="sendCommand('start camera')">Start Camera</button>
+        <button class="btn btn-warning" onclick="sendCommand('stop camera')">Stop Camera</button>
       </div>
     </div>
 
-    <!-- ========== ADD-ON OPTIONS ========== -->
+    <!-- ========== EXTRA FEATURES (من ملفك الأصلي) ========== -->
     <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#addonOptions"
-              aria-expanded="false" aria-controls="addonOptions"
-              onclick="closeInnerMenus('#addonOptions')">
-        Smart Door System Add-on Options
-      </button>
-      <div id="addonOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
-        </ul>
+      <h3 class="p-3">⚙️ Extra Controls</h3>
+      <div class="p-3">
+        <button class="btn btn-secondary" onclick="sendCommand('light on')">Light On</button>
+        <button class="btn btn-dark" onclick="sendCommand('light off')">Light Off</button>
+        <button class="btn btn-info" onclick="sendCommand('fan on')">Fan On</button>
+        <button class="btn btn-outline-info" onclick="sendCommand('fan off')">Fan Off</button>
       </div>
     </div>
 
-    <!-- ========== EXPLANATION ========== -->
-    <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#explain"
-              aria-expanded="false" aria-controls="explain"
-              onclick="closeInnerMenus('#explain')">
-        Smart Door System Explanation
-      </button>
-      <div id="explain" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
-         <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
-         <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
-         <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
-        </ul>
-      </div>
+    <!-- ========== LIVE CAMERA STREAM (الجديد) ========== -->
+    <div class="card control-card">
+      <h3 class="p-3">📹 Live Camera</h3>
+      <video id="remoteVideo" autoplay playsinline style="width:100%; border-radius:12px;"></video>
+      <button class="btn btn-success m-3" onclick="startStream()">Start Live</button>
     </div>
   </div>
 
-  <!-- Bootstrap 5 (JS) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Firebase + Logic -->
+  <!-- ========== FIREBASE + LOGIC ========== -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+    import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-    // إعدادات مشروعك
     const firebaseConfig = {
       apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
       authDomain: "smart-door-system-project.firebaseapp.com",
@@ -186,38 +78,52 @@
       measurementId: "G-HY1Y22VZJT"
     };
 
-    // تهيئة Firebase
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // دالة تبعت الأمر لفايربيز
-    function sendCommand(command) {
-      set(ref(db, "commands/last"), {
-        action: command,
+    // ========== SEND COMMAND ==========
+    async function sendCommand(cmd) {
+      await set(ref(db, "commands/last"), {
+        action: cmd,
         timestamp: Date.now()
       });
-      alert("✅ Sent: " + command);
     }
-
-    // نخليها متاحة للـ HTML
     window.sendCommand = sendCommand;
 
-    // يقفل أي قوائم فرعية مفتوحة لما الزر الكبير يتسكر
-    window.closeInnerMenus = function (parentId) {
-      setTimeout(() => {
-        let parent = document.querySelector(parentId);
-        if (parent && !parent.classList.contains("show")) {
-          let opened = parent.querySelectorAll(".collapse.show");
-          opened.forEach(el => {
-            let bsCollapse = bootstrap.Collapse.getInstance(el);
-            if (bsCollapse) {
-              bsCollapse.hide();
-            }
+    // ========== WEBRTC PART ==========
+    let pc;
+
+    async function startStream() {
+      pc = new RTCPeerConnection();
+
+      pc.ontrack = (event) => {
+        document.getElementById("remoteVideo").srcObject = event.streams[0];
+      };
+
+      // نعمل offer
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+
+      // نبعث الـ offer للبايثون عبر Firebase
+      await set(ref(db, "commands/last"), {
+        action: "webrtc_offer",
+        sdp: offer.sdp,
+        timestamp: Date.now()
+      });
+
+      // نستقبل الـ answer من البايثون
+      onValue(ref(db, "webrtc_answer"), async (snapshot) => {
+        const data = snapshot.val();
+        if (data && data.sdp && !pc.currentRemoteDescription) {
+          const answer = new RTCSessionDescription({
+            type: "answer",
+            sdp: data.sdp
           });
+          await pc.setRemoteDescription(answer);
         }
-      }, 200);
-    };
+      });
+    }
+    window.startStream = startStream;
   </script>
 </body>
 </html>
-
