--- a/control.html
+++ b/control.html
@@ -153,6 +153,47 @@
 
   </div>
 
+<!-- ========== ADD-ON OPTIONS ========== -->
+    <div class="card control-card">
+      <button type="button" class="btn-toggle"
+              data-bs-toggle="collapse" data-bs-target="#addonOptions"
+              aria-expanded="false" aria-controls="addonOptions"
+              onclick="closeInnerMenus('#addonOptions')">
+        Smart Door System Add-on Options
+      </button>
+      <div id="addonOptions" class="collapse">
+        <ul class="list-group list-group-flush list-group-dark">
+          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- ========== EXPLANATION ========== -->
+    <div class="card control-card mb-5">
+      <button type="button" class="btn-toggle"
+              data-bs-toggle="collapse" data-bs-target="#explain"
+              aria-expanded="false" aria-controls="explain"
+              onclick="closeInnerMenus('#explain')">
+        Smart Door System Explanation
+      </button>
+      <div id="explain" class="collapse">
+        <ul class="list-group list-group-flush list-group-dark">
+         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
+         <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
+         <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
+         <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
+         <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
+         <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
+         <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
+         <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
+         <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
+         <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
+         <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
+        </ul>
+      </div>
+    </div>
+</div>
+  
   <!-- Bootstrap 5 (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -207,3 +248,4 @@
   </script>
 </body>
 </html>
+
